Fix bugs in deleteLyric and createLyric
