# src/models/request/postLyricRequest.ts
@@ -1,6 +1,6 @@
 export default interface PostLyricRequest {
-    movieId: number;
-    episodeId: number;
     seconds: number;
-    quality?: number;
+    movieId: number;
+    quality: number | null;
+    episodeId: number | null;
 }
