# src/models/request/putLyricRequest.ts
@@ -1,6 +1,6 @@
 export default interface PutLyricRequest {
     seconds: number;
-    quality: number | null;
     movieId: number;
-    episodeId: number;
+    quality: number | null;
+    episodeId: number | null;
 }
